Footer and z-index fix

--- a/src/main/webapp/common-css/common.css
+++ b/src/main/webapp/common-css/common.css
@@ -72,28 +72,52 @@ body {
 }
 
 .footercolumn1 {
-	width: 32%;
+	/* width: 32%;
 	float: left;
 	color: white;
 	font-size: 15px;
 	padding-top: 40px;
-	margin-left: 100px;
+	margin-left: 100px; */	
+	border-right: 1px solid white;
+	float: left;
+	color: white;
+	font-size: 13px;
+	margin-left: 30px;
+	text-align: center;
+	margin-top: 60px;
+	cursor: pointer;
+	width: 7%;
 }
 .footercolumn2 {
-	width: 28%;
+	/* width: 28%;
 	float: left;
 	color: white;
 	font-size: 15px;
 	padding-top: 40px;
-	#margin-left: 100px;
+	#margin-left: 100px; */	
+	float: left;
+	margin-top: 60px;
+	cursor: pointer;
+	color: white;
+	font-size: 13px;
+	margin-left: 13px;
+	text-align: left;
+	width: 12%;
 }
 .footercolumn3 {
-	width: 20%;
+	/* width: 20%;
 	float: left;
 	color: white;
 	font-size: 15px;
 	padding-top: 40px;
-	#margin-left: 100px;
+	#margin-left: 100px; */	
+	color: white;
+	font-size: 13px;
+	font-weight: bold;
+	top: 60px;
+	float: right;
+	margin-right:20px;
+	position: relative;
 }
 
 .clear {
